feat: add single select dropdown menu to the index.html - the home page of this app

--- a/public/index.html
+++ b/public/index.html
@@ -79,6 +79,15 @@
               <input type='date' name='issueDate' id='issueDate' />
             </div>
 
+            <div class='form-group'>
+              <label for='issueDate'>Certificate Theme:</label>
+              <select name="theme" id="theme">
+                <option value="colorful">Colorful</option>
+                <option value="monochrome">Monochrome</option>
+                <option value="dark">Dark</option>
+              </select>
+            </div>
+
             <div class='form-actions'>
               <button type='submit'>Generate Certificate</button>
             </div>
